// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer cli should initialise betterer in a repo 1`] = `
Array [
  "🎉 Initialising Betterer (0ms): 2 tasks done!
✅ Create test file: done!
・ created \\"<project>/fixtures/test-betterer-init/.betterer.ts\\"!
✅ Update package.json: done!
・ added \\"betterer\\" script to package.json file.
・ added \\"@betterer/cli\\" dependency to package.json file
・ added \\"typescript\\" dependency to package.json file
",
]
`;

exports[`betterer cli should initialise betterer in a repo with JS 1`] = `
Array [
  "🎉 Initialising Betterer (0ms): 2 tasks done!
✅ Create test file: done!
・ created \\"<project>/fixtures/test-betterer-init-js/.betterer.js\\"!
✅ Update package.json: done!
・ added \\"betterer\\" script to package.json file.
・ added \\"@betterer/cli\\" dependency to package.json file
",
]
`;

exports[`betterer cli should work multiple times 1`] = `
Array [
  "🎉 Initialising Betterer (0ms): 2 tasks done!
✅ Create test file: done!
・ created \\"<project>/fixtures/test-betterer-init-multiple/.betterer.ts\\"!
✅ Update package.json: done!
・ added \\"betterer\\" script to package.json file.
・ added \\"@betterer/cli\\" dependency to package.json file
・ added \\"typescript\\" dependency to package.json file
",
  "🎉 Initialising Betterer (0ms): 2 tasks done!
✅ Create test file: done!
・ \\"<project>/fixtures/test-betterer-init-multiple/.betterer.ts\\" already exists, moving on...
✅ Update package.json: done!
・ \\"betterer\\" script already exists, moving on...
・ \\"@betterer/cli\\" dependency already exists, moving on...
・ \\"typescript\\" dependency already exists, moving on...
",
]
`;
